# ninja2bazel

./: AGENTS.md  MODULE.bazel  README  README.md  bazel.py  build.py  build_visitor.py  cc_import_parse.py  configure_file.py  cppfileparser.py  fdb_cc_imports  ninjabuild.py  parser.py  postprocess  protoparser.py  tox.ini  visitor.py
.github/workflows/: main.yml  ruff.yaml
contrib/posttreatments/: BUILD.bazel  README.md  add_crc32_arm_crc_copts.py  add_protocol_version_header_genrule.py  render_configure_file.py  render_protocol_version_header.py
contrib/posttreatments/examples/: BUILD.bazel.addcrc
contrib/posttreatments/examples/protocol_version/: BUILD.bazel
contrib/posttreatments/examples/protocol_version/flow/: ProtocolVersion.h.cmake  ProtocolVersions.cmake
test/: build_test.py  test_bazel.py  test_bazel_gen.py  test_bazel_utils.py  test_build.py  test_build_features.py  test_build_target.py  test_build_target_extra.py  test_build_target_usage.py  test_build_visitor.py  test_cc_import_parse_utils.py  test_configure_file.py  test_contrib_posttreatments.py  test_cpp_includes.py  test_cppfileparser.py  test_helpers.py  test_integration_build_files.py  test_ninjabuild.py  test_ninjabuild_utils.py  test_parser_utils.py  test_protoparser.py
tools/: render_configure_file.py
