module(
    name = "foundationdb",
    version = "1.0",
)
bazel_dep(name = "boost.format", version = "1.87.0")
bazel_dep(name = "boost.lockfree", version = "1.87.0")
bazel_dep(name = "boost.context", version = "1.87.0")
bazel_dep(name = "boost.parameter", version = "1.87.0")
bazel_dep(name = "boost.filesystem", version = "1.87.0")
bazel_dep(name = "boost.atomic", version = "1.87.0")
bazel_dep(name = "boost.iostreams", version = "1.87.0")
bazel_dep(name = "boost.serialization", version = "1.87.0")
bazel_dep(name = "boost.preprocessor", version = "1.87.0")
bazel_dep(name = "boost.variant", version = "1.87.0")
bazel_dep(name = "boost.spirit", version = "1.87.0")
bazel_dep(name = "boost.asio", version = "1.87.0")
bazel_dep(name = "boost.thread", version = "1.87.0")
bazel_dep(name = "boost.functional", version = "1.87.0")
bazel_dep(name = "boost.container", version = "1.87.0")
bazel_dep(name = "boost.system", version = "1.87.0")
bazel_dep(name = "openssl", version = "3.3.1.bcr.3")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "jemalloc", version = "5.3.0-bcr.alpha.4")
bazel_dep(name = "msgpack-c", version = "6.1.0")
