py_binary(
    name = "render_protocol_version_header",
    srcs = ["render_protocol_version_header.py"],
    main = "render_protocol_version_header.py",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "render_configure_file",
    srcs = ["render_configure_file.py"],
    main = "render_configure_file.py",
    visibility = ["//visibility:public"],
)
